HUGE refactor of chess simulation to use a BoardCommand that interacts with a Board object